Ability to validate post #6
